// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stil MI_KA 1`] = `
Object {
  "filter": Array [
    "has",
    "MI_KA",
  ],
  "id": "MI_KA",
  "interactive": true,
  "paint": Object {
    "fill-color": "#FFFF00",
    "fill-outline-color": "#FF0000",
  },
  "source": "sqrt42",
  "source-layer": "sqrt42",
  "type": "fill",
}
`;

exports[`stil NA 1`] = `
Object {
  "filter": Array [
    "has",
    "NA_T",
  ],
  "id": "NA_T",
  "interactive": true,
  "paint": Object {
    "fill-color": "#FFFF00",
    "fill-outline-color": "#FF0000",
  },
  "source": "sqrt42",
  "source-layer": "sqrt42",
  "type": "fill",
}
`;

exports[`stil toppNode 1`] = `
Object {
  "id": "NA",
  "interactive": true,
  "paint": Object {
    "fill-color": "hsla(251, 59%, 28%, 0.8)",
    "fill-outline-color": "hsla(128, 88%, 29%, 0.8)",
  },
  "source": "sqrt42",
  "source-layer": "sqrt42",
  "type": "fill",
}
`;
